dfir_rs/tests/compile-fail-stable/surface_badgeneric_lifetime.rs
../compile-fail/surface_badgeneric_lifetime.rs